mainifest-files/token-for-sa.yaml
#pod with serviceaccount and token
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: build-robot
  automountServiceAccountToken: false

---
#create role
k create role <name> --verb=update --resource=namespaces -n <ns> --dry-run=client -oyaml
#create rolebinding with SA
k create rolebinding <name> --role=<name> --serviceaccount=<ns>:<r_name> -n <ns> --dry-run=client -o yaml
