mainifest-files/netpol_contion_ingress_egress.yaml
#allow_outgoing_traffic_from_namespace_pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-egress
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: client # podselector from which traffic will be alllowed
  policyTypes:
  - Egress
  egress:
  - to:
      - namespaceSelector:
          matchLabels:
            project: test #namespace label to which traffic allowed
        podSelector:
          matchLabels:
            app: nginx #pod label to which traffic allowd
    ports:
    - protocol: TCP
      port: 80 #port on which traffic is allowd.

---

#allow_incoming_traffic_from_namespaced_pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: nginx # podselector to which traffic will be alllowed
  policyTypes:
  - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            project: test #namespace label from which traffic allowd
        podSelector:
          matchLabels:
            app: client #pod label from which traffic allowd
    ports:
    - protocol: TCP
      port: 80 #port on which traffic is allowd.
---
#default-deny-all-ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 53 #DNS
    - port: 53
      protocol: UDP
